hotfix: fix deploy folder

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -16,5 +16,5 @@ jobs:
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /var/www/unigem-dev/src
+            cd /var/www/unigem/src
             git pull origin master
